--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,16 @@
     {
       "src": "/(.*)",
       "dest": "/frontend/$1"
+    },
+    {
+      "src": "/(.*)",
+      "status": 200,
+      "headers": {
+        "Cache-Control": "s-maxage=0, stale-while-revalidate"
+      }
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
